--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "fast-csv": "^5.0.2",
     "multer": "^1.4.5-lts.2",
     "pdfkit": "^0.17.1",
-    "pg": "^8.15.6"
+    "pg": "^8.15.6",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
